<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/brown"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:fontFamily="@font/baloo"
        android:text="@string/congratulations"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/winner"
        android:text="@string/you_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:textColor="@color/white"
        android:textSize="22sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/okey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="17sp"/>

</LinearLayout>